# figment

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: results.json
docs/: agents.md  results.md  theory.md
examples/: belief_demo.py  quickstart.py
figment/: __init__.py  __main__.py  arena.py  belief.py  cards.py  cli.py  elo.py  engine.py  evolve.py  presets.py  scripts_demo.py  viz.py
figment/agents/: __init__.py  adaptive.py  base.py  fundamental.py  market_maker.py  momentum.py  random_agent.py
scripts/: benchmark.py
tests/: test_arena.py  test_belief.py  test_cards.py  test_elo.py  test_engine.py  test_momentum.py  test_reproducibility.py
